increases tomcat memory